@@ -21,34 +21,62 @@
 #pragma GCC diagnostic pop
 #endif
 
-/* Macros to setup GEOS Context and error handlers
-
-Typical PyGEOS pattern in a function that uses GEOS:
-
-
-// GEOS_INIT will do three things:
-// 1. Make the GEOS context available in the variable ``ctx``
-// 2. Initialize a variable ``errstate`` to PGERR_SUCCESS.
-// 3. Set up GEOS error and warning buffers, respectively ``last_error`` and
-``last_warning``
-
-GEOS_INIT;   // or GEOS_INIT_THREADS if you use no CPython calls
-
-
-// call a GEOS function using the context 'ctx'
-result = SomeGEOSFunc(ctx, ...);
-
-// handle an error state
-if (result == NULL) { errstate = PGERR_GEOS_EXCEPTION; goto finish; }
-
-
-// GEOS_FINISH will remove the GEOS context and set python errors in case
-// errstate != PGERR_SUCCESS.
-
-finish:
-  GEOS_FINISH;  //  or GEOS_FINISH_THREADS if you use no CPython calls
-
-*/
+/*
+ * GEOS Context Management and Error Handling Macros
+ *
+ * These macros provide a standardized way to manage GEOS contexts and handle errors
+ * in Shapely's C extension code. The GEOS context is stored in thread-local storage
+ * to ensure thread safety when multiple Python threads are using GEOS operations
+ * simultaneously.
+ *
+ * GEOS Context:
+ * - GEOS has a so-called 'reentrant' C API that allows multiple threads to use GEOS
+ *   functions simultaneously without interfering with each other, provided that each
+ *   GEOS function is called with its own GEOSContextHandle_t context handle.
+ * - Shapely creates a separate GEOS context for each Python thread, stored in thread-local
+ *   storage.
+ *
+ * Initialization and GIL Management:
+ * - The GEOS_INIT macro gets (or creates) the thread-local GEOS context for the current
+ *   thread and sets this in the local `ctx` variable.
+ * - The GEOS_INIT_THREADS does the same, but also releases the GIL allowing other Python
+ *   threads to run concurrently. GEOS_FINISH_THREADS must be used to reacquire the GIL.
+ *
+ * Finalization and Error Handling:
+ * - Errors are captured in the 'errstate' and 'last_error' variables, that are
+ *   initialized in GEOS_INIT.
+ * - Errors are converted to appropriate Python exceptions in the GEOS_FINISH macro.
+ *   PyErr_SetString will be called if `errstate != PGERR_SUCCESS`. When writing Python
+ *   C extension functions, the caller should check `errstate` and return `NULL` in that
+ *   case. For NumPy ufuncs, this is not applicable because they return `NULL` anyway.
+ * - In case of a GEOS error, the 'last_error' buffer is used as a temporary storage
+ *   for the error message. This buffer is reused (as threadlocal).
+ *
+ * Usage Pattern:
+ *
+ * GEOS_INIT;  // Initialize context and error handling
+ *             // Use GEOS_INIT_THREADS if no Python C API calls are made
+ *
+ * // Perform GEOS operations using the 'ctx' context handle
+ * result = GEOSGeomFromWKT_r(ctx, wkt_string);
+ * if (result == NULL) {
+ *     errstate = PGERR_GEOS_EXCEPTION;
+ *     goto finish;
+ * }
+ *
+ * // More operations (that may adjust `errstate`)...
+ *
+ * finish:
+ *   GEOS_FINISH;  // Clean up context and convert errors to Python exceptions
+ *                 // Use GEOS_FINISH_THREADS if GEOS_INIT_THREADS was used
+ *
+ * // Python C extension function should check errstate and return NULL on error
+ * if (errstate != PGERR_SUCCESS) {
+ *     return NULL;
+ * }
+ * return Py_BuildValue(...);  // Return appropriate Python object
+ *
+ */
 
 // Define the error states
 enum ShapelyErrorCode {
@@ -71,10 +99,6 @@ enum ShapelyErrorCode {
 
 // Define how the states are handled by CPython
 #define GEOS_HANDLE_ERR                                                                  \
-  /* The warnings are unused currently (the NoticeHandler is not set up)                 \
-  if (last_warning[0] != 0) {                                                            \
-    PyErr_WarnEx(PyExc_Warning, last_warning, 0);                                        \
-  } */                                                                                      \
   switch (errstate) {                                                                    \
     case PGERR_SUCCESS:                                                                  \
       break;                                                                             \
@@ -140,38 +164,32 @@ enum ShapelyErrorCode {
   }                                                                                      \
 
 // Define initialization / finalization macros
-#define _GEOS_INIT_DEF           \
+#define GEOS_INIT           \
   char errstate = PGERR_SUCCESS; \
-  char last_error[1024] = "";    \
-  /* char last_warning[1024] = ""; */ \
-  GEOSContextHandle_t ctx
-
-#define _GEOS_INIT     \
-  ctx = GEOS_init_r(); \
-  GEOSContext_setErrorMessageHandler_r(ctx, geos_error_handler, last_error)
-
-#define GEOS_INIT \
-  _GEOS_INIT_DEF; \
-  _GEOS_INIT
+  char* last_error = init_geos_error_buffer(); \
+  GEOSContextHandle_t ctx = init_geos_context()
 
 #define GEOS_INIT_THREADS \
-  _GEOS_INIT_DEF;         \
-  Py_BEGIN_ALLOW_THREADS _GEOS_INIT
+  GEOS_INIT;         \
+  Py_BEGIN_ALLOW_THREADS
 
 #define GEOS_FINISH   \
-  GEOS_finish_r(ctx); \
   GEOS_HANDLE_ERR
 
 #define GEOS_FINISH_THREADS \
-  GEOS_finish_r(ctx);       \
   Py_END_ALLOW_THREADS GEOS_HANDLE_ERR
+
+
 
 #define GEOS_SINCE_3_11_0 ((GEOS_VERSION_MAJOR >= 3) && (GEOS_VERSION_MINOR >= 11))
 #define GEOS_SINCE_3_12_0 ((GEOS_VERSION_MAJOR >= 3) && (GEOS_VERSION_MINOR >= 12))
 #define GEOS_SINCE_3_13_0 ((GEOS_VERSION_MAJOR >= 3) && (GEOS_VERSION_MINOR >= 13))
 
-extern void* geos_context[1];
 extern PyObject* geos_exception[1];
+
+/* Threadlocal GEOS context support */
+extern GEOSContextHandle_t init_geos_context(void);
+extern char* init_geos_error_buffer(void);
 
 extern void geos_error_handler(const char* message, void* userdata);
 extern void destroy_geom_arr(void* context, GEOSGeometry** array, int length);
@@ -187,7 +205,7 @@ extern char wkt_empty_3d_geometry(GEOSContextHandle_t ctx, GEOSGeometry* geom,
 #endif  // !GEOS_SINCE_3_12_0
 extern char geos_interpolate_checker(GEOSContextHandle_t ctx, GEOSGeometry* geom);
 
-extern int init_geos(PyObject* m);
+extern int init_shapely(PyObject* m);
 
 int get_bounds(GEOSContextHandle_t ctx, GEOSGeometry* geom, double* xmin, double* ymin,
                double* xmax, double* ymax);
